--- a/testing-samples-main/ui/espresso/AccessibilitySample/build.gradle
+++ b/testing-samples-main/ui/espresso/AccessibilitySample/build.gradle
@@ -45,4 +45,5 @@ ext {
     extJUnitVersion = "1.1.2-alpha03"
     runnerVersion = "1.3.0-alpha03"
     espressoVersion = "3.3.0-alpha03"
+    guavaVersion = "29.0-android"
 }
