--- a/testing-samples-main/ui/espresso/BasicSample/app/build.gradle
+++ b/testing-samples-main/ui/espresso/BasicSample/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'jacoco'
+
 android {
     compileSdkVersion 30
     buildToolsVersion rootProject.buildToolsVersion
