--- a/AndroidUnitTestDemo/app/src/main/AndroidManifest.xml
+++ b/AndroidUnitTestDemo/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.AndroidUnitTestDemo">
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".MyReceiver" android:exported="false">
+            <intent-filter>
+                <action android:name="com.lisa.androidunittestdemo.MyReceiver"/>
+            </intent-filter>
+        </receiver>
+        <service android:name=".MyService"/>
     </application>
 
 </manifest>
