--- a/AndroidUnitTestDemo/app/src/main/AndroidManifest.xml
+++ b/AndroidUnitTestDemo/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidUnitTestDemo">
+        <activity android:name=".MusicChannelActivity"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login"/>
+            android:label="@string/title_activity_login" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".MyReceiver" android:exported="false">
+
+        <receiver
+            android:name=".MyReceiver"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.lisa.androidunittestdemo.MyReceiver"/>
+                <action android:name="com.lisa.androidunittestdemo.MyReceiver" />
             </intent-filter>
         </receiver>
-        <service android:name=".MyService"/>
+
+        <service android:name=".MyService" />
     </application>
 
 </manifest>
